<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/activity_bg">

    <View
        android:id="@+id/ellipse"
        android:layout_width="397dp"
        android:layout_height="397dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-230dp"
        android:layout_marginLeft="-175dp"
        android:background="@drawable/icon_background"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wel_back"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/dark_blue"
        android:textSize="26dp"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="215dp"
        android:layout_marginRight="32dp"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="33dp"
        app:srcCompat="@drawable/logo_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="200dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:textColor="@color/b_w_text"
            android:layout_marginLeft="32dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:onClick="thirdPartLogin"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:backgroundTint="@color/activity_bg">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/facebook_button_layout"
                android:layout_marginRight="9dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/google_button_layout"
                android:layout_marginRight="9dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/twitter_button_layout"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="32dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:textColor="@color/b_w_text"/>

        <EditText
            android:id="@+id/editText_email"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="33dp"
            android:textSize="16dp"
            android:textColor="@color/b_w_text"
            android:backgroundTint="@color/grey_tint"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/editText_emailCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/grey_tint"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/b_w_text"
            android:textCursorDrawable="@null"
            android:textSize="16dp" />

        <CheckBox
            android:layout_marginRight="32dp"
            android:layout_marginLeft="33dp"
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View Password"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/dark_blue"/>
        <TextView
            android:id="@+id/login"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="33dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/b_w_text"
            android:textSize="16dp"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:onClick="onClick"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/email_button_layout"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ny_register"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/b_w_text"
                android:textSize="16dp"/>


            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/dark_blue"
                android:layout_marginLeft="6dp"
                android:textSize="16dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>