<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    android:background="@color/activity_bg"
    tools:context=".OtpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/constraintlayou2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/otp_title"
                    android:textColor="@color/b_w_text"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="75dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/sent"
                        android:textColor="@color/b_w_text"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:paddingLeft="3dp"
                        android:paddingTop="2dp"
                        android:text="demoEmail562@gmail.com"
                        android:textColor="@color/dark_blue"
                        android:textSize="16dp"
                        android:textStyle="bold|italic" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/email_button_layout"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/verify"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_verify">

                <TextView
                    android:id="@+id/tv_didnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/resend_msg"
                    android:textColor="@color/b_w_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/btn_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/resend_again_msg"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:paddingStart="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="TextView"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7">

                <com.chaos.view.PinView
                    android:id="@+id/secondPinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/secondLabel"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:cursorVisible="true"
                    android:inputType="number"
                    android:textColor="@color/b_w_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cursorColor="@color/dark_blue"
                    app:itemCount="6"
                    app:itemRadius="@dimen/pv_pin_view_item_radius"
                    app:lineColor="@color/dark_blue" />



            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/constraintlayou2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/email_otp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>